<?xml version="1.0"?>
<package format="3">
  <name>tita_system_interfaces</name>
  <version>0.1.0</version>
  <description>ROS 2 service definitions for Titati power management and lighting control.</description>
  <maintainer email="dev@tita.example">Titati Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>std_srvs</depend>
  <depend>diagnostic_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
